<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".MovieDetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/description_poster"
                tools:src="@drawable/movie_place_holder"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_marginBottom="@dimen/bottom_card_view_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginStart="@dimen/main_margin">

                <TextView
                    android:id="@+id/textViewOriginalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/test_original_title"/>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardViewOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_marginBottom="@dimen/bottom_card_view_margin"
                android:layout_marginEnd="@dimen/main_margin"
                android:layout_marginStart="@dimen/main_margin">

                <TextView
                    android:id="@+id/textViewOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_margin"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/test_overview"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/main_margin">

                <TextView
                    android:id="@+id/textViewReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:padding="@dimen/main_margin"
                    tools:text="@string/test_release_date"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageViewStar"
        android:layout_margin="@dimen/main_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_rating"
        android:layout_width="@dimen/star_size"
        android:layout_height="@dimen/star_size"
        android:src="@drawable/star"/>

    <TextView
        android:id="@+id/textViewRating"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="@id/imageViewStar"
        app:layout_constraintStart_toStartOf="@id/imageViewStar"
        app:layout_constraintBottom_toBottomOf="@id/imageViewStar"
        app:layout_constraintEnd_toEndOf="@id/imageViewStar"/>


</android.support.constraint.ConstraintLayout>